--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,10 @@ version : 1.0
 .text-center{
     text-align:center;
 }
+.text-white{
+    color: white;
+}
+
 .clearfix{
     clear:both;
     float:none;
@@ -68,6 +72,20 @@ h2{
 }
 h3{
     font-size:1.5rem;
+}
+.float-container{
+    position: relative;
+}
+.float-text{
+    position: absolute;
+    bottom: 50px;
+    left: 40%;
+}
+fieldset{
+    border: 1px solid white;
+    margin: 5%;
+    padding: 3%;
+    border-radius: 5px;
 }
 
 
@@ -172,7 +190,71 @@ h3{
     padding: 1%;
 }
 
-/* css for mobile size or smaller screen*/
-@media only screen and (max-width:768px){
+
+/* for Order Section */
+.order{
+    width: 50%;
+    margin: 0 auto;
+    border-radius: 4px;
+}
+.input-responsive{
+    width: 96%;
+    padding: 1%;
+    margin-bottom: 3%;
+    margin-left: 1%;
+    border: none;
+    border-radius: 5px;
+    font-size: 1rem;
+}
+.order-label{
+    margin-bottom: 1%; 
+    font-weight: bold;
     
+}
+
+
+/* CSS for mobile size or smaller screen*/
+@media only screen and (max-width:768px){
+    .logo{
+        width: 80%;
+        float:none;
+        margin:1% 0;
+    }
+    .menu ul{
+        text-align:center;
+    }
+    .food-search input[type="search"]{
+        width: 90%;
+        padding: 2%;
+        margin-bottom: 5%;
+    }
+    .btn{
+        width: 91%;
+        padding: 2%;
+    }
+
+    .food-search{
+        padding: 10% 0;
+    }
+    .categories{
+        padding:20% 0%;
+    }
+    h2{
+        margin-bottom:10%;
+    }
+    .box-3{
+        width: 90%;
+        margin: 4% auto;
+    }
+    .food-menu{
+        padding:20% auto;
+    }
+    .food-menu-box{
+        width:95%;
+        padding:5%;
+        margin-bottom:5%;
+    }
+    .social{
+        padding:5% 0;
+    }
 }
